# minecraft_clock

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/examples/: CMakeLists.txt
src/include/: color.h  time_1.h  time_11.h  time_14.h  time_16.h  time_18.h  time_21.h  time_22.h  time_23.h  time_25.h  time_26.h  time_3.h  time_30.h  time_31.h  time_32.h  time_33.h  time_37.h  time_41.h  time_42.h  time_44.h  time_45.h  time_50.h  time_53.h  time_54.h  time_58.h  time_59.h  time_60.h  time_61.h  time_62.h  time_64.h  time_8.h
src/src/: time_10.c  time_13.c  time_14.c  time_15.c  time_17.c  time_20.c  time_21.c  time_22.c  time_24.c  time_25.c  time_27.c  time_29.c  time_31.c  time_32.c  time_36.c  time_37.c  time_4.c  time_40.c  time_43.c  time_44.c  time_45.c  time_47.c  time_48.c  time_49.c  time_5.c  time_51.c  time_53.c  time_59.c  time_6.c  time_60.c  time_61.c  time_62.c  time_7.c  time_8.c  time_9.c
stl/: clips.stl  full_watch.stl  link.stl  watch_face.stl  watch_face_desktop.stl
time_faces/: color.h  time_one.c  time_one.h
time_faces/header/: color.h  time_10.h  time_12.h  time_13.h  time_15.h  time_17.h  time_19.h  time_2.h  time_20.h  time_24.h  time_27.h  time_28.h  time_29.h  time_34.h  time_35.h  time_36.h  time_38.h  time_39.h  time_4.h  time_40.h  time_43.h  time_46.h  time_47.h  time_48.h  time_49.h  time_5.h  time_51.h  time_52.h  time_55.h  time_56.h  time_57.h  time_6.h  time_63.h  time_7.h  time_9.h  time_header.h
time_faces/src/: time_1.c  time_11.c  time_12.c  time_16.c  time_18.c  time_19.c  time_2.c  time_23.c  time_26.c  time_28.c  time_3.c  time_30.c  time_33.c  time_34.c  time_35.c  time_38.c  time_39.c  time_41.c  time_42.c  time_46.c  time_50.c  time_52.c  time_54.c  time_55.c  time_56.c  time_57.c  time_58.c  time_63.c  time_64.c
uf2/: hello_world.uf2  minecraft_clock.uf2
